updated the header

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body class="main_content"> 
     <header>
         <br>
-        <h1 class = "page_title">Jovan Devadoss</h1>
+        <h1 class ="home_title">Hello 👋</h1>
+        <h5 class = "color_gradient_text">Jovan Devadoss's Digital Portfolio</h5>
     </header>
-    <p>Hello 👋</p>
     <hr>
 
-    
+    <h4>Here are a few projects that im working on:</h4>
 
     <div class = "vl"></div>
 </body>
