even more updates

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet"> 
     <title>Jovan</title>
 </head>
-<body class="main_content"> 
-    <header>
+<body> 
+    <header class="header_content">
         <br>
         <h1 class ="home_title">Hello 👋</h1>
         <h5 class = "color_gradient_text">Jovan Devadoss's Digital Portfolio</h5>
     </header>
     <hr>
-
-    <h4>Here are a few projects that im working on:</h4>
+    <br>
+    <div class = "main_body">
+    <h4>Projects:</h4>
+    
+    </div> 
 
     <div class = "vl"></div>
 </body>
