Creating A list of projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <br>
     <div class = "main_body">
     <h4>Projects:</h4>
-    
+    <ol>
+        <li>Paveble</li>
+        <li>Pestibuzz</li>
+    </ol>
     </div> 
 
     <div class = "vl"></div>
