mostly done with the homepage

--- a/index.html
+++ b/index.html
@@ -16,12 +16,24 @@
     <hr>
     <br>
     <div class = "main_body">
-    <h4>Projects:</h4>
+    <h4>Projects: <img src="assets/Jovan_visionary.jpeg" class="rounded float-end img-fluid profile_image"  alt="Jovan wearing the Apple vision pro, looking into the future"></h4> 
+    <br>
     <ol>
-        <li>Paveble</li>
-        <li>Pestibuzz</li>
+        <li><h6>Paveble</h6></li>
+        <ul>
+            <li>At Paveble, I take care of all the technical aspects of the product. </li>
+        </ul>
+        <br>
+        <li><h6>Pestibuzz</h6></li>
+        <ul>
+            <li>Pestibuzz.com will be out soon 🌱</li>
+        </ul>
     </ol>
+    <br>
+    <button type ="button" class="btn btn-outline-success margin"> Visit Pestibuzz</button>
+    <button type ="button" class="btn btn-outline-primary ">Visit Paveble</button>
     </div> 
+
 
     <div class = "vl"></div>
 </body>
