--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
     <button type ="button" class="btn btn-outline-success margin " id ="pestibuzz" href="http://pestibuzz.com"> Visit Pestibuzz</button>
     <button type ="button" class="btn btn-outline-primary " id = "paveble">Visit Paveble</button>
     
-    </div> 
-
-
-
+    <br>
     <div class = "vl"></div>
 </body>
+<footer>
+    <h6>Email Me!</h6>
+    <p><a href="mailto:jovandevadoss447@gmail.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
+    
+
+</footer>
 </html>
