--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
     <br>
     <div class = "main_body">
-    <h4>Projects: <img src="assets/Jovan_visionary.jpeg" class="rounded float-end img-fluid profile_image"  alt="Jovan wearing the Apple vision pro, looking into the future"></h4> 
+    <h4>Projects: <img src="Assets/Jovan_visionary.jpeg" class="rounded float-end img-fluid profile_image"  alt="Jovan wearing the Apple vision pro, looking into the future"></h4> 
     <br>
     <ol>
         <br>
