added social links git push

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             document.getElementById("pestibuzz").addEventListener("click", function() {
                 window.open("http://pestibuzz.com", "_blank");
             });
-            document.getElementById("paveble").addEventListener("click", function() {
-                window.open("http://paveble.com", "_blank");
-            });
         });
         </script>
+
 </head>
 
 <body> 
@@ -47,7 +45,9 @@
 <footer>
     <h6>Email Me!</h6>
     <p><a href="mailto:jovandevadoss447@gmail.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
-    
-
+    <div class="social-links">
+        <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
+        <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
+    </div>
 </footer>
 </html>
