change to description

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br>
         <li><h6>Pestibuzz</h6></li>
         <ul>
-            <li>Pestibuzz.com will be out soon 🌱</li>
+            <li>Need crop protection advice? Check out pestibuzz.com.</li>
         </ul>
     </ol>
     <br>
