--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <h4>Projects: <img src="Assets/Jovan_visionary.jpeg" class="rounded float-end img-fluid profile_image"  alt="Jovan wearing the Apple vision pro, looking into the future"></h4> 
     <ol>
         <br>
-        <li><h6>Pestibuzz</h6></li>
+        <li><h6>Pestisearch</h6></li>
         <ul>
-            <li>Need crop protection advice? Check out pestibuzz.com.</li>
+            <li>Need crop protection advice? Check out pestisearch.com.</li>
         </ul>
     </ol>
     <br>
 
-    <button type ="button" class="btn btn-outline-success margin " id ="pestibuzz" href="http://pestibuzz.com"> Visit Pestibuzz</button>
+    <button type ="button" class="btn btn-outline-success margin " id ="pestibuzz" href="https://www.pestisearch.com"> Visit Pestibuzz</button>
         
     <br>
     <div class = "vl"></div>
