--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </ol>
     <br>
 
-    <button type ="button" class="btn btn-outline-success margin " id ="pestibuzz" href="https://www.pestisearch.com"> Visit Pestibuzz</button>
+    <button type ="button" class="btn btn-outline-success margin " id ="Pestisearch" href="https://www.pestisearch.com"> Visit Pestibuzz</button>
         
     <br>
     <div class = "vl"></div>
