--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            document.getElementById("pestibuzz").addEventListener("click", function() {
-                window.open("http://pestibuzz.com", "_blank");
+            document.getElementById("Pestisearch").addEventListener("click", function() {
+                window.open("http://www.pestisearch.com", "_blank");
             });
         });
         </script>
@@ -37,7 +37,7 @@
     </ol>
     <br>
 
-    <button type ="button" class="btn btn-outline-success margin " id ="Pestisearch" href=https://www.pestisearch.com> Visit Pestisearch</button>
+    <button type ="button" class="btn btn-outline-success margin " id ="Pestisearch" href="https://www.pestisearch.com"> Visit Pestisearch</button>
         
     <br>
     <div class = "vl"></div>
