--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             document.getElementById("Pestisearch").addEventListener("click", function() {
                 window.open("http://www.pestisearch.com", "_blank");
             });
+            document.getElementById("Paveble").addEventListener("click", function() {
+                window.open("https://www.paveble.com", "_blank");
+            });
         });
         </script>
 
@@ -32,13 +35,19 @@
         <br>
         <li><h6>Pestisearch</h6></li>
         <ul>
-            <li>Need crop protection advice? Check out pestisearch.com.</li>
+            <li>Need crop protection advice? Pestisearch is here to provide you with instant, profitable, and sustainable crop protection advice!</li>
+            <br>
+            <button type ="button" class="btn btn-outline-success margin" id ="Pestisearch" href="https://www.pestisearch.com"> Visit Pestisearch</button>
+        </ul>
+        <br>
+        <li><h6>Paveble</h6></li>
+        <ul>
+            <li>Working on making braille even more accesible</li>
+            <br>
+            <button type ="button" class="btn btn-outline-primary margin" id ="Paveble" href="https://www.paveble.com"> Visit Paveble</button>
         </ul>
     </ol>
-    <br>
-
-    <button type ="button" class="btn btn-outline-success margin " id ="Pestisearch" href="https://www.pestisearch.com"> Visit Pestisearch</button>
-        
+    <br>        
     <br>
     <div class = "vl"></div>
 </body>
