--- a/art.html
+++ b/art.html
@@ -10,18 +10,20 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="art.html">3D <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="art.html">3D <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -52,20 +54,20 @@
     <script>
         // Array of image filenames 
         const images = [
-            'cubefieldr2.png',
-            'cubefieldr3.png',
-            'finalrendercomp.png',
-            'finnah2-2.png',
-            'finnah3.png',
-            'Floofball3.png',
-            'fluiddifangle3.png',
-            'glassred.png',
-            'Merry Christmas.png',
-            'Merrychristmas!.png',
-            'octopusweird.png',
-            'staryplateb.png',
-            'tree3.png',
-            'spaceman.png'
+            'cubefieldr2-min.png',
+            'cubefieldr3-min.png',
+            'finalrendercomp-min.png',
+            'finnah2-2-min.png',
+            'finnah3-min.png',
+            'Floofball3-min.png',
+            'fluiddifangle3-min.png',
+            'glassred-min.png',
+            'Merry Christmas-min.png',
+            'Merrychristmas!-min.png',
+            'octopusweird-min.png',
+            'staryplateb-min.png',
+            'tree3-min.png',
+            'spaceman-min.png'
         ];
 
         const gallery = document.getElementById('gallery');
