--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="styles.css" rel="stylesheet">
-    <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <link href="../styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Jovan</title>
 
     <script>
@@ -17,25 +17,28 @@
                 window.open("https://www.paveble.com", "_blank");
             });
         });
-        </script>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="art.html">3D</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
 
+        function toggleNav() {
+            document.getElementById('navbarNav').classList.toggle('show');
+        }
+    </script>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="art.html">3D</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </head>
 
 <body> 
@@ -47,7 +50,7 @@
     <hr>
     <br>
     <div class = "main_body">
-    <h4>Projects: <img src="Assets/Jovan_visionary.jpeg" class="rounded float-end img-fluid profile_image"  alt="Jovan wearing the Apple vision pro, looking into the future"></h4> 
+    <h4>Projects: <img src="../Assets/Jovan_visionary.jpeg" class="rounded float-end img-fluid profile_image"  alt="Jovan wearing the Apple vision pro, looking into the future"></h4> 
     <ol>
         <br>
         <li><h6>Pestisearch</h6></li>
@@ -70,7 +73,7 @@
 </body>
 <footer>
     <h6>Email Me!</h6>
-    <p><a href="mailto:jovandevadoss447@gmail.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
+    <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
     <div class="social-links">
         <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
         <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
