--- a/art.html
+++ b/art.html
@@ -22,7 +22,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="art.html">3D <span class="sr-only">(current)</span></a>
                     </li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="year.html">Year Progress</a>
+                      </li>
             </div>
         </div>
     </nav>
