--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="art.html">3D</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="year.html">Year Progress</a>
+                      </li>
                 </ul>
             </div>
         </div>
