--- a/art.html
+++ b/art.html
@@ -24,7 +24,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="year.html">Year Progress</a>
-                      </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="empty_form.html">Form</a>
+                    </li>
             </div>
         </div>
     </nav>
