--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="year.html">Year Progress</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="empty_form.html">Form</a>
+                    </li>
                 </ul>
             </div>
         </div>
