--- a/year.html
+++ b/year.html
@@ -219,6 +219,10 @@
           <li class="nav-item active">
             <a class="nav-link" href="year.html">Year Progress</a>
           </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="empty_form.html">Form</a>
+        </li>
         </ul>
       </div>
     </div>
