--- a/art.html
+++ b/art.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="art.html">3D <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="art.html">3D</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="year.html">Year Progress</a>
