--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="portfolio-section">
         <header class="text-center">
             <h1 class="home_title">👋</h1>
-            <h5 class="gradient-text">Jovan Devadoss's Digital Portfolio</h5>
+            <h5 class="gradient-text">This is Jovan's Website</h5>
         </header>
                 
         <div class="projects">
