New styling purple

--- a/empty_form.html
+++ b/empty_form.html
@@ -21,7 +21,7 @@
                 <textarea rows="4" placeholder="The contents of this form will be sent into the void." required></textarea>
                     <div class="form-actions">
                         <button class = "form-button" type="submit">Void</button>
-                        <p>If you want to actually send Jovan a message, please send Jovan an email (this form doesnt work).</p>
+                        <p>If you want to actually send Jovan a message, please send him an email (this form doesn't work).</p>
                     </div>
         </form>
     </div>
