--- a/year.html
+++ b/year.html
@@ -21,7 +21,7 @@
     }
 
     nav .active a {
-      color: darkviolet;
+      color: rgb(60, 5, 122);
     }
 
     .container {
@@ -49,7 +49,7 @@
     .progress-bar {
       width: 50px;
       height: 300px;
-      border: 2px solid blueviolet;
+      border: 2px solid rgb(60, 5, 122);
       margin: 0 auto;
       position: relative;
       border-radius: 25px;
@@ -60,7 +60,7 @@
       position: absolute;
       bottom: 0;
       width: 100%;
-      background-color: blueviolet;
+      background-color: rgb(60, 5, 122);
       transition: height 0.5s ease;
     }
 
@@ -80,8 +80,8 @@
     }
 
     .circle.filled {
-      background-color: blueviolet;
-      border-color: blueviolet;
+      background-color: rgb(60, 5, 122);
+      border-color: rgb(60, 5, 122);
     }
 
     .circle.sunday {
@@ -105,7 +105,7 @@
     }
 
     .buttons button.active {
-      background-color: darkviolet;
+      background-color: rgb(60, 5, 122);
       transform: translateY(-2px);
     }
   </style>
