fixed paveble button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="project">
                 <h2>Paveble</h2>
                 <p>Working on making braille even more accessible</p>
-                <button id="Paveble">Visit Paveble</button>
+                <button id="Paveble" onclick="window.open('https://www.paveble.com', '_blank')">Visit Paveble</button>
             </div>
         </div>
     </div>
