--- a/empty_form.html
+++ b/empty_form.html
@@ -30,7 +30,7 @@
 </body>
 <footer>
     <h6>Email Me!</h6>
-    <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
+    <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovan@jovandevadoss.com</a></p>
     <div class="social-links">
         <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
         <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
