changed the description of pestisearch

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="projects">
             <div class="project">
                 <h2>Pestisearch</h2>
-                <p>Need crop protection advice? Pestisearch is here to provide you with instant, profitable, and sustainable crop protection advice!</p>
+                <p>Helping growers make sustainable & profitable crop protection plans.</p>
                 <button id="Pestisearch" onclick="window.open('https://www.pestisearch.com', '_blank')">Visit Pestisearch</button>
             </div>
 
